# Cryptvault

./: .bandit  .env.example  .gitignore  .pre-commit-config.yaml  ADVANCED_MINIMALIST_CHARTS_FINAL.md  ALL_IMPROVEMENTS_COMPLETE.md  API_SWITCHING_SUMMARY.md  CCXT_ENV_CONFIG.md  CHANGELOG.md  CI_CD_IMPROVEMENTS_COMPLETE.md  CI_OPTIMIZATION_COMPLETE.md  CLEANUP_IMPROVEMENTS.md  CLEAN_TERMINAL_CHARTS_FINAL.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRYPTVAULT_ENHANCED_FINAL.md  CRYPTVAULT_FINAL.md  CRYPTVAULT_LAUNCH.md  CRYPTVAULT_LIVE_DEMO_RESULTS.md  Dockerfile  ENHANCED_ENSEMBLE_DEMO.md  ENHANCED_ML_SUMMARY.md  ENHANCED_TERMINAL_CHARTS_DEMO.md  ENVIRONMENT_SETUP.md  FINAL_ENHANCED_ENSEMBLE_SUMMARY.md  FINAL_ENHANCED_ML_DEMO.md  FINAL_SETUP_SUMMARY.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  INSTALL.md  INTELLIGENT_ANALYSIS_COMPLETE.md  LICENSE  ML_PREDICTION_SPEC.md  PACKAGE_BASED_SYSTEM.md  PUSH_COMMANDS.txt  QUICK_GUIDE.md  README.md  REPOSITORY_SETUP_COMPLETE.md  TRADINGVIEW_STYLE_CHARTS_COMPLETE.md  advanced_crypto_charts.py  (+15 more)
.config/: .dockerignore  .pylintrc  README.md  setup.cfg
.github/: dependabot.yml
.github/archive/: ci.yml  security.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  security.yml  simplified-ci.yml
.kiro/specs/crypto-chart-analyzer/: design.md  requirements.md  tasks.md
.kiro/specs/cryptvault-restructuring/: FINAL_CODE_REVIEW.md  FINAL_SUMMARY.md  RELEASE_INSTRUCTIONS.md  TASK_11_SUMMARY.md  TASK_12_SUMMARY.md  TASK_13_SUMMARY.md  TASK_14_SUMMARY.md  TASK_15_SUMMARY.md  TASK_16_SUMMARY.md  TASK_9_SUMMARY.md  requirements.md  tasks.md
config/: .env.example  MANIFEST.in  logging.yaml  settings.development.yaml  settings.testing.yaml  settings.yaml
cryptvault/: __init__.py  __version__.py  analyzer.py  cli.py  config.py  constants.py  exceptions.py  py.typed
cryptvault/alerts/: system.py
cryptvault/analysis/: __init__.py  moving_averages.py  technical.py  trend_analysis.py
cryptvault/cli/: README.md  __init__.py  commands.py  formatters.py  validators.py
cryptvault/config/: __init__.py  manager.py  settings.py
cryptvault/core/: README.md  __init__.py  analyzer.py
cryptvault/data/: README.md  __init__.py  cache.py  fetchers.py  models.py  package_fetcher.py  parsers.py  validator.py  validators.py
cryptvault/data/models/: __init__.py  models.py  package_fetcher.py  parsers.py  validator.py
cryptvault/indicators/: README.md  __init__.py  momentum.py  moving_averages.py  optimized.py  technical.py  trend.py  trend_analysis.py  volatility.py  volume.py
cryptvault/ml/: README.md  __init__.py  cache.py  ensemble_predictor.py  features.py  models.py  prediction_cache.py  predictor.py  simple_predictor.py
cryptvault/ml/features/: __init__.py  pattern_features.py  technical_features.py  time_features.py
cryptvault/ml/models/: __init__.py  ensemble_model.py  ensemble_predictor.py  linear_models.py  lstm_predictor.py  prediction_cache.py
cryptvault/ml/prediction/: __init__.py  predictor.py
cryptvault/patterns/: README.md  __init__.py  advanced.py  base.py  candlestick.py  continuation.py  detector.py  divergence.py  geometric.py  harmonic.py  reversal.py  scanner.py  types.py
cryptvault/portfolio/: analyzer.py
cryptvault/security/: README.md  __init__.py  credential_manager.py  input_validator.py  rate_limiter.py
cryptvault/storage/: __init__.py  result_storage.py
cryptvault/utils/: README.md  __init__.py  cache.py  calculation_cache.py  logging.py  optional_deps.py  profiling.py  resource_manager.py
cryptvault/visualization/: README.md  __init__.py  candlestick_charts.py  chart_generator.py  desktop_charts.py  pattern_overlay.py  terminal_chart.py
deployment/: .dockerignore  Dockerfile  Makefile  deploy.ps1  deploy.sh  docker-compose.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  BEAUTIFUL_CANDLESTICK_CHARTS.md  CHANGELOG.md  CHANGELOG_STOCK_SUPPORT.md  CHART_GENERATION_RESULTS.md  CLI_VS_CORE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  DOCUMENTATION_COMPLETE.md  ENHANCED_ML_SYSTEM.md  FINAL_SYSTEM_SUMMARY.md  GETTING_STARTED.md  INDEX.md  INTERACTIVE_CHART_GUIDE.md  INTERACTIVE_FEATURES_SUMMARY.md  MATPLOTLIB_TOOLBAR_GUIDE.md  NAVIGATION_MAP.md  PERFORMANCE.md  PLATFORM_SUPPORT.md  PROJECT_STATUS.md  QUICKSTART.md  QUICK_GUIDE.md  README.md  RELEASE_NOTES_3.1.0.md  RELEASE_NOTES_4.0.0.md  SECURITY.md  SECURITY_FIXES.md  SETUP_COMPLETE.md  STOCK_AND_CHART_FEATURES.md  STOCK_SUPPORT_AND_CHARTS.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  _NAVIGATION_TEMPLATE.md  main_README.md  security
docs/setup/: INSTALLATION_VERIFIED.md  SETUP_GUIDE.md
examples/: custom_chart_with_patterns.py  pattern_overlay_example.py  resource_management_example.py
requirements/: README.md  base.txt  dev.txt  optional.txt  test.txt
scripts/: README.md  backup.ps1  backup.sh  benchmark_performance.py  deploy.ps1  deploy.sh  health-check.ps1  health-check.sh  pre-push-check.ps1  pre-push-check.sh  run_checks.bat  run_checks.sh  security_audit.py  setup-git-hooks.ps1  setup-git-hooks.sh  test-pre-push.ps1
tests/: __init__.py  conftest.py  test_cryptvault.py  test_csv_parser.py  test_data_models.py  test_data_validator.py  test_json_parser.py  test_matplotlib_interactive.py  test_moving_averages.py  test_technical_indicators.py  test_trend_analysis.py  test_triangle_patterns.py
tests/fixtures/: mock_responses.py  sample_data.py
tests/integration/: test_analyzer_workflow.py  test_cli_commands.py
tests/unit/: test_data_models.py  test_indicators.py  test_patterns.py
