[metadata]
name = cryptvault
version = attr: cryptvault.__version__.__version__
author = MeridianAlgo Algorithmic Research Team (Quantum Meridian)
author_email = support@meridianalgo.com
description = Advanced AI-Powered Cryptocurrency Analysis Platform with 50+ Patterns & ML Ensemble
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MeridianAlgo/CryptVault
project_urls =
    Homepage = https://meridianalgo.com
    Documentation = https://github.com/MeridianAlgo/CryptVault/wiki
    Repository = https://github.com/MeridianAlgo/CryptVault
    Bug Reports = https://github.com/MeridianAlgo/CryptVault/issues
    Changelog = https://github.com/MeridianAlgo/CryptVault/releases
    Source Code = https://github.com/MeridianAlgo/CryptVault
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    Topic :: Office/Business :: Financial :: Investment
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Environment :: Console
    Natural Language :: English
    Typing :: Typed
keywords =
    cryptocurrency
    bitcoin
    ethereum
    trading
    analysis
    machine-learning
    AI
    technical-analysis
    chart-patterns
    LSTM
    ensemble-models
    fintech
    tradingview
    patterns
    forecasting
    stocks
    finance

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.19.0,<2.0.0
    pandas>=1.3.0,<2.0.0
    scikit-learn>=1.0.0,<1.5.0
    yfinance>=0.2.0,<0.3.0
    ccxt>=4.0.0,<5.0.0
    cryptocompare>=0.7.0,<1.0.0
    matplotlib>=3.5.0,<4.0.0
    colorama>=0.4.4,<1.0.0
include_package_data = True
zip_safe = False

[options.packages.find]
where = .
include = cryptvault*
exclude =
    tests*
    docs*
    examples*
    scripts*

[options.package_data]
cryptvault = py.typed, *.yaml, *.yml, *.json

[options.entry_points]
console_scripts =
    cryptvault = cryptvault_cli:main

[options.extras_require]
ml =
    torch>=1.12.0,<3.0.0
viz =
    plotly>=5.0.0,<6.0.0
    dash>=2.0.0,<3.0.0
streaming =
    websockets>=10.0,<13.0
fast =
    numba>=0.55.0,<1.0.0
db =
    sqlalchemy>=1.4.0,<3.0.0
    redis>=4.0.0,<6.0.0
export =
    openpyxl>=3.0.0,<4.0.0
    jinja2>=3.0.0,<4.0.0
notify =
    requests>=2.25.0,<3.0.0
dev =
    pytest>=6.0.0,<8.0.0
    pytest-cov>=2.0.0,<5.0.0
    pytest-mock>=3.6.0,<4.0.0
    black>=21.0.0,<24.0.0
    flake8>=3.8.0,<7.0.0
    isort>=5.0.0,<6.0.0
    pylint>=2.12.0,<4.0.0
    mypy>=0.800,<1.10.0
    bandit>=1.7.0,<2.0.0
    safety>=2.0.0,<4.0.0
    sphinx>=4.0.0,<8.0.0
    sphinx-rtd-theme>=1.0.0,<3.0.0
    ipython>=7.0.0,<9.0.0
    pre-commit>=2.15.0,<4.0.0
test =
    pytest>=6.0.0,<8.0.0
    pytest-cov>=2.0.0,<5.0.0
    pytest-mock>=3.6.0,<4.0.0
    pytest-xdist>=2.0.0,<4.0.0
    pytest-timeout>=2.0.0,<3.0.0
    faker>=8.0.0,<25.0.0
    freezegun>=1.0.0,<2.0.0
    responses>=0.20.0,<1.0.0
    requests-mock>=1.9.0,<2.0.0
    pytest-benchmark>=3.4.0,<5.0.0
    coverage[toml]>=6.0.0,<8.0.0

[bdist_wheel]
universal = 0

[sdist]
formats = gztar

[flake8]
max-line-length = 100
extend-ignore = E203, E266, E501, W503
exclude =
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    *.egg-info,
    .venv,
    venv,
    .tox,
    docs,
    tests/fixtures
max-complexity = 10
per-file-ignores =
    __init__.py:F401

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
disallow_incomplete_defs = False
check_untyped_defs = True
disallow_untyped_decorators = False
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
follow_imports = normal
ignore_missing_imports = True
pretty = True
show_column_numbers = True
show_error_codes = True
show_error_context = True

[mypy-yfinance.*]
ignore_missing_imports = True

[mypy-ccxt.*]
ignore_missing_imports = True

[mypy-cryptocompare.*]
ignore_missing_imports = True

[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-sklearn.*]
ignore_missing_imports = True

[mypy-torch.*]
ignore_missing_imports = True

[mypy-plotly.*]
ignore_missing_imports = True

[tool:pytest]
minversion = 6.0
testpaths = tests
python_files = test_*.py *_test.py
python_classes = Test*
python_functions = test_*
addopts =
    -ra
    --strict-markers
    --strict-config
    --showlocals
    --tb=short
markers =
    unit: Unit tests
    integration: Integration tests
    slow: Slow tests that make real API calls
    ml: Machine learning tests
    viz: Visualization tests
filterwarnings =
    error
    ignore::UserWarning
    ignore::DeprecationWarning

[coverage:run]
source = cryptvault
omit =
    */tests/*
    */test_*.py
    */__pycache__/*
    */site-packages/*
branch = True

[coverage:report]
precision = 2
show_missing = True
skip_covered = False
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING:
    @abstractmethod
    @abc.abstractmethod

[coverage:html]
directory = htmlcov
